# agent_demo

./: README.md
business-days-demo/: README.md  business_days.py  validator_report.json
business-days-demo/tests/: test_business_days.py
demo/: README.md  main.py
issue-repair-demo/: .gitignore  README.md  demo_prompt.md  pyproject.toml
issue-repair-demo/examples/: team.csv
issue-repair-demo/src/csv_guard/: __init__.py  __main__.py  exporter.py
issue-repair-demo/tests/: test_exporter.py
